[project]
name = "knotebook"
version = "0.1.0"
description = "Make notes with markdown"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
authors = [
	{ name = "Bhabishwor Gurung", email = "bhabishwor@proton.me" }
]
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "typer>=0.24.1",
]

[project.urls]
"Repository" = "https://codeberg.org/bhabishwor/knotebook"

[dependency-groups]
docs = [
    "mike>=2.1.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]

[project.scripts]
knotebook = "knotebook.__main__:app"

[build-system]
requires = [
	"setuptools>=61.0",
	"setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"
